# university_cpp

./: polynomials_karatsuba.cpp  setBST.cpp
Z3_polynomials/: Polynomial.cpp  Polynomial.h  README.md  Z3.cpp  Z3.h  main.cpp
baca/: A.cpp  D.cpp  E.cpp  F.cpp  G.cpp  Interpolation.cpp  RootFinder.cpp
baca/splines/: source.cpp
jasio/: CMakeLists.txt  main.cpp
naive_polimorfism/: CMakeLists.txt  Character.cpp  Character.h  Item.cpp  Item.h  MagicWeapon.cpp  MagicWeapon.h  Medicine.cpp  Medicine.h  Weapon.cpp  Weapon.h  main.cpp
naive_polimorfism/przyklad/: Weapon.h  randvar.cpp  shelf.cpp
numerical_methods/: SOR.cpp  funkcja.h  mixed_derivatives.cpp  seq_geom.cpp  vectalg.h
numerical_methods/splines/: CMakeLists.txt  main.cpp  source.h
polimorfism_test/: CMakeLists.txt  Oceniacz.cpp  Oceniacz.h  OceniaczPojedynczyWybor.cpp  OceniaczPojedynczyWybor.h  OceniaczWielokrotnyWybor.cpp  OceniaczWielokrotnyWybor.h  Person.cpp  Person.h  Pytanie.cpp  Pytanie.h  Test.cpp  Test.h  main.cpp
przemytnicy/: CMakeLists.txt  main.cpp
